add_subdirectory(lezione_0001_hello_world)
add_subdirectory(lezione_0010_disegno_linee)
add_subdirectory(lezione_0020_rettangoli_colori)
add_subdirectory(lezione_0030_figure_geometriche)
add_subdirectory(lezione_0040_caricamento_immagini)
add_subdirectory(lezione_0100_movimento)
add_subdirectory(lezione_0300_movimento_mouse)


